src/test/ui/use-mod.stderr
error[E0430]: `self` import can only appear once in the list
  --> $DIR/use-mod.rs:12:5
   |
12 |     self,
   |     ^^^^
   |
note: another `self` import appears here
  --> $DIR/use-mod.rs:16:5
   |
16 |     self
   |     ^^^^

error[E0431]: `self` import can only appear in an import list with a non-empty prefix
  --> $DIR/use-mod.rs:23:6
   |
23 | use {self};
   |      ^^^^

error[E0252]: the name `bar` is defined multiple times
  --> $DIR/use-mod.rs:16:5
   |
12 |     self,
   |     ---- previous import of the module `bar` here
...
16 |     self
   |     ^^^^ `bar` reimported here
   |
   = note: `bar` must be defined only once in the type namespace of this module
help: You can use `as` to change the binding name of the import
   |
16 |     self as Otherbar
   |

error: aborting due to 3 previous errors

